--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
+  "name": "poc-cypress-web",
+  "version": "1.0.0",
+  "description": "test-poc-cypress-kp",
+  "main": "cypress.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dhandyjoe/POC-Cypress-KP.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dhandyjoe/POC-Cypress-KP/issues"
+  },
+  "homepage": "https://github.com/dhandyjoe/POC-Cypress-KP#readme",
   "dependencies": {
-    "cypress": "^14.2.0"
+    "cypress": "^14.2.0",
+    "cypress-mochawesome-reporter": "^3.8.2"
   }
 }
