--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,13 @@
-name: End-to-end tests
+name: Cypress tests
 on: push
 jobs:
     cypress-run:
+        name: Cypress run
         runs-on: ubuntu-24.04
         steps:
             - name: Checkout
               uses: actions/checkout@v4
-            # Install npm dependencies, cache them correctly
-            # and run all Cypress tests
             - name: Cypress run
               uses: cypress-io/github-action@v6
+              with:
+                  project: cypress/e2e/simple/simple.cy.js
