--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+
             - name: Cypress run
               uses: cypress-io/github-action@v6
               with:
-                  project: cypress/e2e/simple/
+                  spec: cypress/e2e/simple/simple.cy.js
